[tool.poetry]
name = "pybookkeeper"
version = "0.1.0"
description = "Python app to manage your personal finances"
authors = ["Anatoly Chistov <atchistov@gmail.com>", "LXDMIPT Group"]
license = "MIT"
readme = "README.md"
packages = [{include = "bookkeeper"}]

[tool.poetry.dependencies]
python = ">=3.12.2,<3.13"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
pylint = "^3.1.0"
flake8 = "^7.0.0"
mccabe = "^0.7.0"
pyside6 = "^6.6.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"